--- a/Gradle Library Projects/app/AndroidManifest.xml
+++ b/Gradle Library Projects/app/AndroidManifest.xml
@@ -1,14 +1,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.goddchen.android.gradle.libraryprojects.app"
+    package="com.pwc.sample"
     android:versionCode="1"
     android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19" />
 
     <application android:label="@string/app_name"
+        android:name=".SampleApplication"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".lib1.activity.RunListActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.pwc.sample.lib1.activity.RunActivity"
+            android:label="@string/app_name" />
+        <receiver android:name=".lib1.receiver.TrackingLocationReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.bignerdranch.android.runtracker.ACTION_LOCATION"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
