--- a/Gradle Library Projects/app/build.gradle
+++ b/Gradle Library Projects/app/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'android'
 
 android {
 	compileSdkVersion 19
-	buildToolsVersion "19.0.2"
+	buildToolsVersion "19.1.0"
 	
 	dependencies {
 		compile project(":library")
@@ -39,4 +39,7 @@ android {
 			}
 		}
 	}
+    lintOptions {
+        abortOnError false
+    }
 }
