--- a/Gradle Library Projects/library2/AndroidManifest.xml
+++ b/Gradle Library Projects/library2/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pwc.sample"
+    package="com.pwc.sample.lib2"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="19" />
 
     <application
         android:icon="@drawable/ic_launcher"
