--- a/Gradle Library Projects/library2/build.gradle
+++ b/Gradle Library Projects/library2/build.gradle
@@ -13,10 +13,11 @@ apply plugin: 'android-library'
 
 android {
 	compileSdkVersion 19
-	buildToolsVersion "19.0.2"
+	buildToolsVersion "19.1.0"
 
     dependencies{
         compile files('libs/android-support-v4.jar')
+        compile project(":jar1")
     }
 
 	sourceSets {
