--- a/Gradle Library Projects/app/AndroidManifest.xml
+++ b/Gradle Library Projects/app/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:name=".SampleApplication"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
-        <activity android:name=".lib1.activity.RunListActivity"
+        <activity android:name=".lib1.activity.ListActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
